# Rag_endpoint_v2

./: Arogya_sanjeevni.txt  Arogya_sanjeevni_test.txt  CONSTITUTION.txt  LLM.py  National_Parivar_Mediclaim_Plus_Policy.txt  National_Parivar_test.txt  README.md  Splendor.txt  UNITED INDIA INSURANCE.txt  agent.py  app_new.py  app_old.py  app_test.py  config.py  constituition_test.txt  del_cache.py  doc_anal.py  document_extraction.py  dump.rdb  embed_lance.py  embed_lance_512.py  embed_sentence_by_sent.py  family_medicare_policy.txt  gemini_clients.py  hackrx_stream_log.jsonl  happy_family_floater.txt  happy_family_test.txt  main.py  mediclaim_insurance.txt  newton.txt  newton_test.txt  nohup.out  output.md  overlap_test.txt  patch_azure.py  plumber.py  plumber.txt  policy_ppt.txt  pyproject.toml  search.py  (+6 more)
bajaj_embed/Arogya_sanjeevni.lance/_transactions/: 0-80740e34-f748-4335-9c2d-13e812bdee25.txn  1-caeb4db5-1794-4718-8c3a-e40f99242fe6.txn
bajaj_embed/Arogya_sanjeevni.lance/_versions/: 1.manifest  2.manifest
bajaj_embed/Arogya_sanjeevni.lance/data/: b7ddd0c9-390d-4d2e-84c5-661da018ee02.lance
bajaj_embed/CONSTITUTION.lance/_transactions/: 0-4c6740ee-78ef-4b72-98c2-47e772f2146e.txn  1-9b7ef270-c565-438b-b74f-eed2e2755b07.txn
bajaj_embed/CONSTITUTION.lance/_versions/: 1.manifest  2.manifest
bajaj_embed/CONSTITUTION.lance/data/: 2e3178ad-df1e-4452-a0df-0b8639c5278a.lance
bajaj_embed/National_Parivar.lance/_transactions/: 0-34db9d9c-be5d-4d9d-8bb4-15c1a5f93c4d.txn  1-e1f85698-f6d3-4e71-b823-952fcba39fe4.txn
bajaj_embed/Splendor.lance/_versions/: 1.manifest  (+1 more)
(+287 files in other folders)
